--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Albert
 Author URI : https://localhost/wordpress-6.4.2/wordpress
 Description: Our default theme for 2020 is designed to take full advantage of the flexibility of the block editor. Organizations and businesses have the ability to create dynamic landing pages with endless layouts using the group and column blocks. The centered content column and fine-tuned typography also makes it perfect for traditional blogs. Complete editor styles give you a good idea of what your content will look like, even before you publish. You can give your site a personal touch by changing the background colors and the accent color in the Customizer. The colors of all elements on your site are automatically calculated based on the colors you pick, ensuring a high, accessible color contrast for your visitors.
 Tags: blog, one-column, custom-background, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, block-styles, wide-blocks, accessibility-ready
-Version: 1.3
+Version: 1.0.0
 Requires at least: 5.0
 Tested up to: 5.4
 Requires PHP: 7.0
@@ -30,7 +30,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
     --white: #fff;
     --gray: #767575;
     --gray-dark: #434242;
-    --primary: #6f42c1;
+    --primary: #4d81e8;
     --secondary: #4f4f4f;
     --success: #28a745;
     --info: #17a2b8;
@@ -179,7 +179,7 @@ h6 {
     color: rgba(0, 0, 0, 0.6)
 }
 .logo{
-    width:78px;
+    width:105%;
 }
 .social-list a {
     width: 32px;
@@ -229,7 +229,7 @@ h6 {
 }
 .gradient{
     background: rgb(43,43,43);
-    background: linear-gradient(151deg, var(--orange) 0%, var(--pink) 35%,var(--primary) 100%) !important;
+    background: linear-gradient(151deg, var(--blue) 0%, var(--info) 35%,var(--primary) 100%) !important;
 }
 .content .post .title {
     font-size: 1.275rem
