add post template and add comment feature for post

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
     --white: #fff;
     --gray: #767575;
     --gray-dark: #434242;
-    --primary: #4d81e8;
+    --primary: #4d5ce8;
     --secondary: #4f4f4f;
     --success: #28a745;
     --info: #17a2b8;
